# confidentiality-analysis-benchmark

./: .gitignore  Cargo.toml  README.md
resources/: last_commit_dates.txt
src/: confidentiality_analysis_utils.rs  gh_api_search_code_response.rs  gh_api_search_repo_response.rs  github_api_utils.rs  main.rs  move_utils.rs
src/confidentiality_analysis_utils/: confidentiality_analysis_helper.rs  quantitative_analysis.rs
src/github_api_utils/: github_api_helper.rs  last_commit_dates.rs
src/move_utils/: move_helper.rs
