[package]
name = "github_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
chrono = "0.4.35"
dotenv = "0.15.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.79"
tempfile = "3.10.1"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.12"
walkdir = "2.5.0"
zip = "0.6.6"
